@@ -369,7 +369,7 @@ class CGraph extends CZBXAPI{
 					$sql_where.
 				$sql_group.
 				$sql_order;
-//SDI($sql);
+
 		$db_res = DBselect($sql, $sql_limit);
 		while($graph = DBfetch($db_res)){
 			if(!is_null($options['countOutput'])){
@@ -442,7 +442,7 @@ COpt::memoryPick();
 				'preservekeys' => 1
 			);
 			$gitems = CGraphItem::get($obj_params);
-//SDI($gitems);
+
 			foreach($gitems as $gitemid => $gitem){
 				$ggraphs = $gitem['graphs'];
 				unset($gitem['graphs']);
@@ -1136,7 +1136,6 @@ COpt::memoryPick();
 // }}} EXCEPTION: ITEMS PERMISSIONS
 		}
 
-
 		foreach($graphs as $gnum => $graph){
 			if(!isset($graph['name'])) continue;
 
@@ -1155,6 +1154,7 @@ COpt::memoryPick();
 			}
 // }}} EXCEPTION: GRAPH EXISTS
 		}
+
 
 		return true;
 	}
